rubocop/examples/bad/style_NegatedIf.rb
# Favor unless over if for negative conditions (or control flow ||).

# bad
do_something if !some_condition

# bad
do_something if not some_condition
